# anapipe

./: README.md  configure.ac
src/: CLI.hpp  Doxygen  Makefile.am  anarpt.cpp  dirutil.h  genjob.cpp  genjob.h  genpipe.cpp  genpipe.h  job.h  main.cpp  options.cpp  options.h  pipeline.cpp  pipeline.h  task.cpp  task.h  util.h
testdata/: example.list
